--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   }
 }
 
-@keyframes typing {
+/* @keyframes typing {
   from {
     width: 0
   }
@@ -40,7 +40,7 @@
   to {
     width: 100%
   }
-}
+} */
 
 @keyframes clippath {
 
