--- a/src/components/Wizardform/Wizardform.css
+++ b/src/components/Wizardform/Wizardform.css
@@ -374,3 +374,8 @@ fieldset .inputtext {
 }
 
 /*end FormThree */
+
+.fade-enter-active,
+.fade-exit-active {
+    transition: all 500ms ease-in-out;
+}
